realigned the booking card to stop scrolling through the header

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -28,6 +28,8 @@
 
 #confirmation-card {
   border-radius: 5px 5px 0px 0px;
+  position: sticky;
+  top: 100px;
 }
 
 .card-description {
